unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/clazar__GCPCoSellOpportunity__c.object-meta.xml
<CustomObject>
    <label>Clazar GCP Co-Sell Opportunity</label>
    <nameField>
        <label>Opportunity Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clazar GCP Co-Sell Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>