unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__approve_time__c.field-meta.xml
<CustomField>
    <fullName>clazar__approve_time__c</fullName>
    <label>Approve Time</label>
    <type>DateTime</type>
</CustomField>