unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__authority__c.field-meta.xml
<CustomField>
    <fullName>clazar__authority__c</fullName>
    <label>Authority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>