unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__cloud_opportunity_updated_time__c.field-meta.xml
<CustomField>
    <fullName>clazar__cloud_opportunity_updated_time__c</fullName>
    <label>Cloud Opportunity Updated Time</label>
    <type>DateTime</type>
</CustomField>