unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__contact_email__c.field-meta.xml
<CustomField>
    <fullName>clazar__contact_email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>