unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__contact_given_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__contact_given_name__c</fullName>
    <label>Contact Given Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>