unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__contact_phone__c.field-meta.xml
<CustomField>
    <fullName>clazar__contact_phone__c</fullName>
    <label>Contact Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>