unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__contract_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__contract_expiry_date__c</fullName>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>