unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__contract_length_months__c.field-meta.xml
<CustomField>
    <fullName>clazar__contract_length_months__c</fullName>
    <label>Contract Length Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>