unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__contract_vehicle__c.field-meta.xml
<CustomField>
    <fullName>clazar__contract_vehicle__c</fullName>
    <label>Contract Vehicle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>