unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__customer_contact_requested__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_contact_requested__c</fullName>
    <label>Customer Contact Requested</label>
    <length>100</length>
    <type>Text</type>
</CustomField>