unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__customer_contacts__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_contacts__c</fullName>
    <label>Customer Contacts</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>