unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__customer_display_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_display_name__c</fullName>
    <label>Customer Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>