unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__deal_number__c.field-meta.xml
<CustomField>
    <fullName>clazar__deal_number__c</fullName>
    <label>Deal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>