unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__decision_phase__c.field-meta.xml
<CustomField>
    <fullName>clazar__decision_phase__c</fullName>
    <label>Decision Phase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>