unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__delivery_model__c.field-meta.xml
<CustomField>
    <fullName>clazar__delivery_model__c</fullName>
    <label>Delivery Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>