unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__display_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__display_name__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>