unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__distributor__c.field-meta.xml
<CustomField>
    <fullName>clazar__distributor__c</fullName>
    <label>Distributor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>