unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__estimated_close_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__estimated_close_date__c</fullName>
    <label>Estimated Close Date</label>
    <type>DateTime</type>
</CustomField>