unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__extensions_count__c.field-meta.xml
<CustomField>
    <fullName>clazar__extensions_count__c</fullName>
    <label>Extensions Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>