unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__incentive_type__c.field-meta.xml
<CustomField>
    <fullName>clazar__incentive_type__c</fullName>
    <label>Incentive Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>