unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__industry__c.field-meta.xml
<CustomField>
    <fullName>clazar__industry__c</fullName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>