unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__isv_solution_connect_deal__c.field-meta.xml
<CustomField>
    <fullName>clazar__isv_solution_connect_deal__c</fullName>
    <label>ISV Solution Connect Deal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>