unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__locality__c.field-meta.xml
<CustomField>
    <fullName>clazar__locality__c</fullName>
    <label>Locality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>