unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__lost_reason__c.field-meta.xml
<CustomField>
    <fullName>clazar__lost_reason__c</fullName>
    <label>Lost Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>