unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__lost_rejected_reason_details__c.field-meta.xml
<CustomField>
    <fullName>clazar__lost_rejected_reason_details__c</fullName>
    <label>Lost Rejected Reason Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>