unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__mapped_object_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__mapped_object_id__c</fullName>
    <label>Mapped Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>