unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__mssp_deal__c.field-meta.xml
<CustomField>
    <fullName>clazar__mssp_deal__c</fullName>
    <label>Mssp Deal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>