unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__need__c.field-meta.xml
<CustomField>
    <fullName>clazar__need__c</fullName>
    <label>Need</label>
    <length>100</length>
    <type>Text</type>
</CustomField>