unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__operation_type__c.field-meta.xml
<CustomField>
    <fullName>clazar__operation_type__c</fullName>
    <label>Operation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>