unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__opportunity_team_members__c.field-meta.xml
<CustomField>
    <fullName>clazar__opportunity_team_members__c</fullName>
    <label>Opportunity Team Members</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>