unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__organization__c.field-meta.xml
<CustomField>
    <fullName>clazar__organization__c</fullName>
    <label>Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>