unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__owner__c.field-meta.xml
<CustomField>
    <fullName>clazar__owner__c</fullName>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>