unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__owner_email__c.field-meta.xml
<CustomField>
    <fullName>clazar__owner_email__c</fullName>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>