unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__partner_entity__c.field-meta.xml
<CustomField>
    <fullName>clazar__partner_entity__c</fullName>
    <label>Partner Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>