unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__partner_ready_to_close__c.field-meta.xml
<CustomField>
    <fullName>clazar__partner_ready_to_close__c</fullName>
    <label>Partner Ready To Close</label>
    <length>100</length>
    <type>Text</type>
</CustomField>