unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__product_family__c.field-meta.xml
<CustomField>
    <fullName>clazar__product_family__c</fullName>
    <label>Product Family</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>