unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__public_sector__c.field-meta.xml
<CustomField>
    <fullName>clazar__public_sector__c</fullName>
    <label>Public Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>