unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__rebate_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__rebate_expiration_date__c</fullName>
    <label>Rebate Expiration Date</label>
    <type>Date</type>
</CustomField>