unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__rebate_extensions__c.field-meta.xml
<CustomField>
    <fullName>clazar__rebate_extensions__c</fullName>
    <label>Rebate Extensions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>