unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__recipients__c.field-meta.xml
<CustomField>
    <fullName>clazar__recipients__c</fullName>
    <label>Recipients</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>