unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__reference_opportunity_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__reference_opportunity_id__c</fullName>
    <label>Reference Opportunity Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>