unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__region__c.field-meta.xml
<CustomField>
    <fullName>clazar__region__c</fullName>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>