unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__region_code__c.field-meta.xml
<CustomField>
    <fullName>clazar__region_code__c</fullName>
    <label>Region Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>