unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__revision__c.field-meta.xml
<CustomField>
    <fullName>clazar__revision__c</fullName>
    <label>Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>