unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__sorting_code__c.field-meta.xml
<CustomField>
    <fullName>clazar__sorting_code__c</fullName>
    <label>Sorting Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>