unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__source__c.field-meta.xml
<CustomField>
    <fullName>clazar__source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>