unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__state_description__c.field-meta.xml
<CustomField>
    <fullName>clazar__state_description__c</fullName>
    <label>State Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>