unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__sub_billing_account_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__sub_billing_account_id__c</fullName>
    <label>Sub Billing Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>