unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__sublocality__c.field-meta.xml
<CustomField>
    <fullName>clazar__sublocality__c</fullName>
    <label>Sublocality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>