unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__submit_time__c.field-meta.xml
<CustomField>
    <fullName>clazar__submit_time__c</fullName>
    <label>Submit Time</label>
    <type>DateTime</type>
</CustomField>