unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__submitter_email__c.field-meta.xml
<CustomField>
    <fullName>clazar__submitter_email__c</fullName>
    <label>Submitter Email</label>
    <type>Email</type>
</CustomField>