unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__timeline__c.field-meta.xml
<CustomField>
    <fullName>clazar__timeline__c</fullName>
    <label>Timeline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>