unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__win_loss_products__c.field-meta.xml
<CustomField>
    <fullName>clazar__win_loss_products__c</fullName>
    <label>Win Loss Products</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>