unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/fields/clazar__won_reason__c.field-meta.xml
<CustomField>
    <fullName>clazar__won_reason__c</fullName>
    <label>Won Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>