unpackaged/main/default/objects/clazar__GCPCoSellOpportunity__c/listViews/clazar__All.listView-meta.xml
<ListView>
    <fullName>clazar__All</fullName>
    <columns>NAME</columns>
    <columns>clazar__stage__c</columns>
    <columns>clazar__state__c</columns>
    <columns>clazar__display_name__c</columns>
    <columns>clazar__owner__c</columns>
    <columns>clazar__deal_size__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>